<resources>
    <string name="app_name">MADLevel1Task1</string>

    <string name="title">Conjunction (AND)</string>

    <string name="A">A</string>
    <string name="B">B</string>
    <string name="Formula">A ^ B</string>

    <string name="True">T</string>
    <string name="False">F</string>
    <string name="TextFill">T or F</string>

    <string name="Submit">Submit</string>

    <string name="correctNumAnswers">The correct number of answers you got is: %d</string>
    <string name="allCorrect">All %d answers are correct!</string>

</resources>